welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: reassignment to val
	if (litMessage=R){
                      ^BDRBuggle:5: error: reassignment to val
	}else if (litMessage=L){
                            ^BDRBuggle:7: error: reassignment to val
	}else if (litMessage=I){
                            ^BDRBuggle:9: error: reassignment to val
	}else if (litMessage=A){
                            ^BDRBuggle:11: error: reassignment to val
	}else if (litMessage=B){
                            ^BDRBuggle:13: error: reassignment to val
	}else if (litMessage=C){
                            ^BDRBuggle:15: error: reassignment to val
	}else if (litMessage=Z){
                            ^BDRBuggle:17: error: reassignment to val
	}else if (litMessage=Y){
                            ^BDRBuggle:19: error: reassignment to val
	}else if (litMessage=x){
                            ^